# mimiclaw_ESP32-S3

./: README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.waveshare_amoled_175  sdkconfig.xiao_esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mimi.c  mimi.h  mimi_config.h  mimi_secrets.h.example  ui_bridge.cpp  ui_bridge.h
main/agent/: agent_loop.c  agent_loop.h  agent_metrics.c  agent_metrics.h  context_builder.c  context_builder.h
main/bus/: message_bus.c  message_bus.h
main/cli/: serial_cli.c
main/discord/: discord_bot.c  discord_bot.h
main/fonts/: Inter_16.c  Inter_16.h  Inter_24.c  Inter_24.h  Inter_32.c  Inter_32.h  Inter_48.c  Inter_48.h  Inter_64.c  Inter_64.h  NotoEmoji_16.c  NotoEmoji_16.h  NotoEmoji_24.c  NotoEmoji_24.h  NotoEmoji_32.c  NotoEmoji_32.h  NotoEmoji_48.h  NotoEmoji_64.h  font_manager.c
main/hardware/: amoled_co5300.h  audio_codec.c  audio_codec.h  audio_mic.c  audio_mic.h  audio_service.c  audio_service.h  battery.c  battery.h  bluetooth_utils.c  bluetooth_utils.h  buttons.c  buttons.h  display.h  epaper.c  epaper.h  imu_qmi8658.c  imu_qmi8658.h  led.c  led.h  network_utils.c  network_utils.h  pm_system.c  pm_system.h  power.h  rules_engine.c  rules_engine.h  sd_card.c  sd_card.h  sensor.h  shtc3.c  shtc3.h  ui_startup.c
main/llm/: llm_interface.h  llm_proxy.c
main/memory/: memory_store.c  session_mgr.c  session_mgr.h
main/skills/: skill_loader.c  skill_loader.h
main/telegram/: telegram_bot.c  telegram_bot.h
main/tools/: tool_agent.c  tool_agent.h  tool_audio.c  tool_audio.h  tool_bluetooth.c  tool_bluetooth.h  tool_cli.c  tool_cli.h  tool_display.c  tool_display.h  tool_files.c  tool_files.h  tool_get_time.c  tool_led.c  tool_led.h  tool_mic.c  tool_mic.h  tool_network.c  tool_network.h  tool_power.c  tool_power.h  tool_registry.c  tool_rules.c  tool_rules.h  tool_sense.c  tool_sense.h  tool_touch.c  tool_touch.h
main/ui/: about_panel.h  batt_chip.h  carousel.cpp  fmt.h  (+28 more)
(+147 files in other folders)
